safe_wrapper_semi/cminus.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: stmt_seq

    2 stmt_seq: stmt_seq stmt
    3         | stmt

    4 stmt: var_stmt
    5     | fun_stmt
    6     | error

    7 var_stmt: type_spec identifier SEMI
    8         | type_spec identifier LBRACE number RBRACE SEMI

    9 type_spec: INT
   10          | VOID

   11 fun_stmt: type_spec identifier LPAREN params RPAREN comp_stmt

   12 params: param_list
   13       | VOID
   14       | %empty

   15 param_list: param_list COMMA param
   16           | param

   17 param: type_spec identifier
   18      | type_spec identifier LBRACE RBRACE

   19 comp_stmt: LCURLY local_stmt stmt_list RCURLY
   20          | LCURLY stmt_list RCURLY
   21          | LCURLY local_stmt RCURLY
   22          | LCURLY RCURLY

   23 local_stmt: local_stmt var_stmt
   24           | var_stmt

   25 stmt_list: stmt_list statement
   26          | statement

   27 statement: expr_stmt
   28          | comp_stmt
   29          | sel_stmt
   30          | it_stmt
   31          | ret_stmt

   32 expr_stmt: expr SEMI
   33          | SEMI

   34 sel_stmt: IF LPAREN expr RPAREN statement
   35         | IF LPAREN expr RPAREN statement ELSE statement

   36 it_stmt: WHILE LPAREN expr RPAREN statement

   37 ret_stmt: RETURN SEMI
   38         | RETURN expr SEMI

   39 expr: var ASSIGN expr
   40     | simp_expr

   41 var: identifier
   42    | identifier LBRACE expr RBRACE

   43 simp_expr: sum_exp relat sum_exp
   44          | sum_exp

   45 relat: LT
   46      | LE
   47      | GT
   48      | GE
   49      | EQ
   50      | NE

   51 sum_exp: sum_exp sum term
   52        | term

   53 sum: PLUS
   54    | MINUS

   55 term: term mult factor
   56     | factor

   57 mult: TIMES
   58     | OVER

   59 factor: LPAREN expr RPAREN
   60       | var
   61       | activation
   62       | number
   63       | error

   64 activation: identifier LPAREN RPAREN
   65           | identifier LPAREN args_seq RPAREN

   66 args_seq: args_seq COMMA expr
   67         | expr

   68 number: NUM

   69 identifier: ID


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 63
    IF (258) 34 35
    ELSE (259) 35
    RETURN (260) 37 38
    WHILE (261) 36
    INT (262) 9
    VOID (263) 10 13
    NUM (264) 68
    ID (265) 69
    PLUS (266) 53
    MINUS (267) 54
    OVER (268) 58
    TIMES (269) 57
    LT (270) 45
    LE (271) 46
    GT (272) 47
    GE (273) 48
    EQ (274) 49
    NE (275) 50
    ASSIGN (276) 39
    SEMI (277) 7 8 32 33 37 38
    COMMA (278) 15 66
    LPAREN (279) 11 34 35 36 59 64 65
    RPAREN (280) 11 34 35 36 59 64 65
    LBRACE (281) 8 18 42
    RBRACE (282) 8 18 42
    LCURLY (283) 19 20 21 22
    RCURLY (284) 19 20 21 22
    ERROR (285)
    XIF (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    stmt_seq (34)
        on left: 2 3
        on right: 1 2
    stmt (35)
        on left: 4 5 6
        on right: 2 3
    var_stmt (36)
        on left: 7 8
        on right: 4 23 24
    type_spec (37)
        on left: 9 10
        on right: 7 8 11 17 18
    fun_stmt (38)
        on left: 11
        on right: 5
    params (39)
        on left: 12 13 14
        on right: 11
    param_list (40)
        on left: 15 16
        on right: 12 15
    param (41)
        on left: 17 18
        on right: 15 16
    comp_stmt (42)
        on left: 19 20 21 22
        on right: 11 28
    local_stmt (43)
        on left: 23 24
        on right: 19 21 23
    stmt_list (44)
        on left: 25 26
        on right: 19 20 25
    statement (45)
        on left: 27 28 29 30 31
        on right: 25 26 34 35 36
    expr_stmt (46)
        on left: 32 33
        on right: 27
    sel_stmt (47)
        on left: 34 35
        on right: 29
    it_stmt (48)
        on left: 36
        on right: 30
    ret_stmt (49)
        on left: 37 38
        on right: 31
    expr (50)
        on left: 39 40
        on right: 32 34 35 36 38 39 42 59 66 67
    var (51)
        on left: 41 42
        on right: 39 60
    simp_expr (52)
        on left: 43 44
        on right: 40
    relat (53)
        on left: 45 46 47 48 49 50
        on right: 43
    sum_exp (54)
        on left: 51 52
        on right: 43 44 51
    sum (55)
        on left: 53 54
        on right: 51
    term (56)
        on left: 55 56
        on right: 51 52 55
    mult (57)
        on left: 57 58
        on right: 55
    factor (58)
        on left: 59 60 61 62 63
        on right: 55 56
    activation (59)
        on left: 64 65
        on right: 61
    args_seq (60)
        on left: 66 67
        on right: 65 66
    number (61)
        on left: 68
        on right: 8 62
    identifier (62)
        on left: 69
        on right: 7 8 11 17 18 41 42 64 65


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    INT    shift, and go to state 2
    VOID   shift, and go to state 3

    program    go to state 4
    stmt_seq   go to state 5
    stmt       go to state 6
    var_stmt   go to state 7
    type_spec  go to state 8
    fun_stmt   go to state 9


State 1

    6 stmt: error .

    $default  reduce using rule 6 (stmt)


State 2

    9 type_spec: INT .

    $default  reduce using rule 9 (type_spec)


State 3

   10 type_spec: VOID .

    $default  reduce using rule 10 (type_spec)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 10


State 5

    1 program: stmt_seq .
    2 stmt_seq: stmt_seq . stmt

    error  shift, and go to state 1
    INT    shift, and go to state 2
    VOID   shift, and go to state 3

    $end  reduce using rule 1 (program)

    stmt       go to state 11
    var_stmt   go to state 7
    type_spec  go to state 8
    fun_stmt   go to state 9


State 6

    3 stmt_seq: stmt .

    $default  reduce using rule 3 (stmt_seq)


State 7

    4 stmt: var_stmt .

    $default  reduce using rule 4 (stmt)


State 8

    7 var_stmt: type_spec . identifier SEMI
    8         | type_spec . identifier LBRACE number RBRACE SEMI
   11 fun_stmt: type_spec . identifier LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 12

    identifier  go to state 13


State 9

    5 stmt: fun_stmt .

    $default  reduce using rule 5 (stmt)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    2 stmt_seq: stmt_seq stmt .

    $default  reduce using rule 2 (stmt_seq)


State 12

   69 identifier: ID .

    $default  reduce using rule 69 (identifier)


State 13

    7 var_stmt: type_spec identifier . SEMI
    8         | type_spec identifier . LBRACE number RBRACE SEMI
   11 fun_stmt: type_spec identifier . LPAREN params RPAREN comp_stmt

    SEMI    shift, and go to state 14
    LPAREN  shift, and go to state 15
    LBRACE  shift, and go to state 16


State 14

    7 var_stmt: type_spec identifier SEMI .

    $default  reduce using rule 7 (var_stmt)


State 15

   11 fun_stmt: type_spec identifier LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 2
    VOID  shift, and go to state 17

    $default  reduce using rule 14 (params)

    type_spec   go to state 18
    params      go to state 19
    param_list  go to state 20
    param       go to state 21


State 16

    8 var_stmt: type_spec identifier LBRACE . number RBRACE SEMI

    NUM  shift, and go to state 22

    number  go to state 23


State 17

   10 type_spec: VOID .
   13 params: VOID .

    RPAREN    reduce using rule 13 (params)
    $default  reduce using rule 10 (type_spec)


State 18

   17 param: type_spec . identifier
   18      | type_spec . identifier LBRACE RBRACE

    ID  shift, and go to state 12

    identifier  go to state 24


State 19

   11 fun_stmt: type_spec identifier LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 25


State 20

   12 params: param_list .
   15 param_list: param_list . COMMA param

    COMMA  shift, and go to state 26

    $default  reduce using rule 12 (params)


State 21

   16 param_list: param .

    $default  reduce using rule 16 (param_list)


State 22

   68 number: NUM .

    $default  reduce using rule 68 (number)


State 23

    8 var_stmt: type_spec identifier LBRACE number . RBRACE SEMI

    RBRACE  shift, and go to state 27


State 24

   17 param: type_spec identifier .
   18      | type_spec identifier . LBRACE RBRACE

    LBRACE  shift, and go to state 28

    $default  reduce using rule 17 (param)


State 25

   11 fun_stmt: type_spec identifier LPAREN params RPAREN . comp_stmt

    LCURLY  shift, and go to state 29

    comp_stmt  go to state 30


State 26

   15 param_list: param_list COMMA . param

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    type_spec  go to state 18
    param      go to state 31


State 27

    8 var_stmt: type_spec identifier LBRACE number RBRACE . SEMI

    SEMI  shift, and go to state 32


State 28

   18 param: type_spec identifier LBRACE . RBRACE

    RBRACE  shift, and go to state 33


State 29

   19 comp_stmt: LCURLY . local_stmt stmt_list RCURLY
   20          | LCURLY . stmt_list RCURLY
   21          | LCURLY . local_stmt RCURLY
   22          | LCURLY . RCURLY

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 40

    var_stmt    go to state 41
    type_spec   go to state 42
    comp_stmt   go to state 43
    local_stmt  go to state 44
    stmt_list   go to state 45
    statement   go to state 46
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 30

   11 fun_stmt: type_spec identifier LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 11 (fun_stmt)


State 31

   15 param_list: param_list COMMA param .

    $default  reduce using rule 15 (param_list)


State 32

    8 var_stmt: type_spec identifier LBRACE number RBRACE SEMI .

    $default  reduce using rule 8 (var_stmt)


State 33

   18 param: type_spec identifier LBRACE RBRACE .

    $default  reduce using rule 18 (param)


State 34

   63 factor: error .

    $default  reduce using rule 63 (factor)


State 35

   34 sel_stmt: IF . LPAREN expr RPAREN statement
   35         | IF . LPAREN expr RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 36

   37 ret_stmt: RETURN . SEMI
   38         | RETURN . expr SEMI

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 61
    LPAREN  shift, and go to state 39

    expr        go to state 62
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 37

   36 it_stmt: WHILE . LPAREN expr RPAREN statement

    LPAREN  shift, and go to state 63


State 38

   33 expr_stmt: SEMI .

    $default  reduce using rule 33 (expr_stmt)


State 39

   59 factor: LPAREN . expr RPAREN

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    expr        go to state 64
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 40

   22 comp_stmt: LCURLY RCURLY .

    $default  reduce using rule 22 (comp_stmt)


State 41

   24 local_stmt: var_stmt .

    $default  reduce using rule 24 (local_stmt)


State 42

    7 var_stmt: type_spec . identifier SEMI
    8         | type_spec . identifier LBRACE number RBRACE SEMI

    ID  shift, and go to state 12

    identifier  go to state 65


State 43

   28 statement: comp_stmt .

    $default  reduce using rule 28 (statement)


State 44

   19 comp_stmt: LCURLY local_stmt . stmt_list RCURLY
   21          | LCURLY local_stmt . RCURLY
   23 local_stmt: local_stmt . var_stmt

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 66

    var_stmt    go to state 67
    type_spec   go to state 42
    comp_stmt   go to state 43
    stmt_list   go to state 68
    statement   go to state 46
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 45

   20 comp_stmt: LCURLY stmt_list . RCURLY
   25 stmt_list: stmt_list . statement

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 69

    comp_stmt   go to state 43
    statement   go to state 70
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 46

   26 stmt_list: statement .

    $default  reduce using rule 26 (stmt_list)


State 47

   27 statement: expr_stmt .

    $default  reduce using rule 27 (statement)


State 48

   29 statement: sel_stmt .

    $default  reduce using rule 29 (statement)


State 49

   30 statement: it_stmt .

    $default  reduce using rule 30 (statement)


State 50

   31 statement: ret_stmt .

    $default  reduce using rule 31 (statement)


State 51

   32 expr_stmt: expr . SEMI

    SEMI  shift, and go to state 71


State 52

   39 expr: var . ASSIGN expr
   60 factor: var .

    ASSIGN  shift, and go to state 72

    $default  reduce using rule 60 (factor)


State 53

   40 expr: simp_expr .

    $default  reduce using rule 40 (expr)


State 54

   43 simp_expr: sum_exp . relat sum_exp
   44          | sum_exp .
   51 sum_exp: sum_exp . sum term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74
    LT     shift, and go to state 75
    LE     shift, and go to state 76
    GT     shift, and go to state 77
    GE     shift, and go to state 78
    EQ     shift, and go to state 79
    NE     shift, and go to state 80

    $default  reduce using rule 44 (simp_expr)

    relat  go to state 81
    sum    go to state 82


State 55

   52 sum_exp: term .
   55 term: term . mult factor

    OVER   shift, and go to state 83
    TIMES  shift, and go to state 84

    $default  reduce using rule 52 (sum_exp)

    mult  go to state 85


State 56

   56 term: factor .

    $default  reduce using rule 56 (term)


State 57

   61 factor: activation .

    $default  reduce using rule 61 (factor)


State 58

   62 factor: number .

    $default  reduce using rule 62 (factor)


State 59

   41 var: identifier .
   42    | identifier . LBRACE expr RBRACE
   64 activation: identifier . LPAREN RPAREN
   65           | identifier . LPAREN args_seq RPAREN

    LPAREN  shift, and go to state 86
    LBRACE  shift, and go to state 87

    $default  reduce using rule 41 (var)


State 60

   34 sel_stmt: IF LPAREN . expr RPAREN statement
   35         | IF LPAREN . expr RPAREN statement ELSE statement

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    expr        go to state 88
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 61

   37 ret_stmt: RETURN SEMI .

    $default  reduce using rule 37 (ret_stmt)


State 62

   38 ret_stmt: RETURN expr . SEMI

    SEMI  shift, and go to state 89


State 63

   36 it_stmt: WHILE LPAREN . expr RPAREN statement

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    expr        go to state 90
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 64

   59 factor: LPAREN expr . RPAREN

    RPAREN  shift, and go to state 91


State 65

    7 var_stmt: type_spec identifier . SEMI
    8         | type_spec identifier . LBRACE number RBRACE SEMI

    SEMI    shift, and go to state 14
    LBRACE  shift, and go to state 16


State 66

   21 comp_stmt: LCURLY local_stmt RCURLY .

    $default  reduce using rule 21 (comp_stmt)


State 67

   23 local_stmt: local_stmt var_stmt .

    $default  reduce using rule 23 (local_stmt)


State 68

   19 comp_stmt: LCURLY local_stmt stmt_list . RCURLY
   25 stmt_list: stmt_list . statement

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 92

    comp_stmt   go to state 43
    statement   go to state 70
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 69

   20 comp_stmt: LCURLY stmt_list RCURLY .

    $default  reduce using rule 20 (comp_stmt)


State 70

   25 stmt_list: stmt_list statement .

    $default  reduce using rule 25 (stmt_list)


State 71

   32 expr_stmt: expr SEMI .

    $default  reduce using rule 32 (expr_stmt)


State 72

   39 expr: var ASSIGN . expr

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    expr        go to state 93
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 73

   53 sum: PLUS .

    $default  reduce using rule 53 (sum)


State 74

   54 sum: MINUS .

    $default  reduce using rule 54 (sum)


State 75

   45 relat: LT .

    $default  reduce using rule 45 (relat)


State 76

   46 relat: LE .

    $default  reduce using rule 46 (relat)


State 77

   47 relat: GT .

    $default  reduce using rule 47 (relat)


State 78

   48 relat: GE .

    $default  reduce using rule 48 (relat)


State 79

   49 relat: EQ .

    $default  reduce using rule 49 (relat)


State 80

   50 relat: NE .

    $default  reduce using rule 50 (relat)


State 81

   43 simp_expr: sum_exp relat . sum_exp

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    var         go to state 94
    sum_exp     go to state 95
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 82

   51 sum_exp: sum_exp sum . term

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    var         go to state 94
    term        go to state 96
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 83

   58 mult: OVER .

    $default  reduce using rule 58 (mult)


State 84

   57 mult: TIMES .

    $default  reduce using rule 57 (mult)


State 85

   55 term: term mult . factor

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    var         go to state 94
    factor      go to state 97
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 86

   64 activation: identifier LPAREN . RPAREN
   65           | identifier LPAREN . args_seq RPAREN

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39
    RPAREN  shift, and go to state 98

    expr        go to state 99
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    args_seq    go to state 100
    number      go to state 58
    identifier  go to state 59


State 87

   42 var: identifier LBRACE . expr RBRACE

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    expr        go to state 101
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 88

   34 sel_stmt: IF LPAREN expr . RPAREN statement
   35         | IF LPAREN expr . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


State 89

   38 ret_stmt: RETURN expr SEMI .

    $default  reduce using rule 38 (ret_stmt)


State 90

   36 it_stmt: WHILE LPAREN expr . RPAREN statement

    RPAREN  shift, and go to state 103


State 91

   59 factor: LPAREN expr RPAREN .

    $default  reduce using rule 59 (factor)


State 92

   19 comp_stmt: LCURLY local_stmt stmt_list RCURLY .

    $default  reduce using rule 19 (comp_stmt)


State 93

   39 expr: var ASSIGN expr .

    $default  reduce using rule 39 (expr)


State 94

   60 factor: var .

    $default  reduce using rule 60 (factor)


State 95

   43 simp_expr: sum_exp relat sum_exp .
   51 sum_exp: sum_exp . sum term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 43 (simp_expr)

    sum  go to state 82


State 96

   51 sum_exp: sum_exp sum term .
   55 term: term . mult factor

    OVER   shift, and go to state 83
    TIMES  shift, and go to state 84

    $default  reduce using rule 51 (sum_exp)

    mult  go to state 85


State 97

   55 term: term mult factor .

    $default  reduce using rule 55 (term)


State 98

   64 activation: identifier LPAREN RPAREN .

    $default  reduce using rule 64 (activation)


State 99

   67 args_seq: expr .

    $default  reduce using rule 67 (args_seq)


State 100

   65 activation: identifier LPAREN args_seq . RPAREN
   66 args_seq: args_seq . COMMA expr

    COMMA   shift, and go to state 104
    RPAREN  shift, and go to state 105


State 101

   42 var: identifier LBRACE expr . RBRACE

    RBRACE  shift, and go to state 106


State 102

   34 sel_stmt: IF LPAREN expr RPAREN . statement
   35         | IF LPAREN expr RPAREN . statement ELSE statement

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29

    comp_stmt   go to state 43
    statement   go to state 107
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 103

   36 it_stmt: WHILE LPAREN expr RPAREN . statement

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29

    comp_stmt   go to state 43
    statement   go to state 108
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 104

   66 args_seq: args_seq COMMA . expr

    error   shift, and go to state 34
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    LPAREN  shift, and go to state 39

    expr        go to state 109
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 105

   65 activation: identifier LPAREN args_seq RPAREN .

    $default  reduce using rule 65 (activation)


State 106

   42 var: identifier LBRACE expr RBRACE .

    $default  reduce using rule 42 (var)


State 107

   34 sel_stmt: IF LPAREN expr RPAREN statement .
   35         | IF LPAREN expr RPAREN statement . ELSE statement

    ELSE  shift, and go to state 110

    $default  reduce using rule 34 (sel_stmt)


State 108

   36 it_stmt: WHILE LPAREN expr RPAREN statement .

    $default  reduce using rule 36 (it_stmt)


State 109

   66 args_seq: args_seq COMMA expr .

    $default  reduce using rule 66 (args_seq)


State 110

   35 sel_stmt: IF LPAREN expr RPAREN statement ELSE . statement

    error   shift, and go to state 34
    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    NUM     shift, and go to state 22
    ID      shift, and go to state 12
    SEMI    shift, and go to state 38
    LPAREN  shift, and go to state 39
    LCURLY  shift, and go to state 29

    comp_stmt   go to state 43
    statement   go to state 111
    expr_stmt   go to state 47
    sel_stmt    go to state 48
    it_stmt     go to state 49
    ret_stmt    go to state 50
    expr        go to state 51
    var         go to state 52
    simp_expr   go to state 53
    sum_exp     go to state 54
    term        go to state 55
    factor      go to state 56
    activation  go to state 57
    number      go to state 58
    identifier  go to state 59


State 111

   35 sel_stmt: IF LPAREN expr RPAREN statement ELSE statement .

    $default  reduce using rule 35 (sel_stmt)
